Adding styles and content.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>FAQ Accordion Card</title>
 </head>
 <body>
+
+    <section class="accordion-section">
+
+    </section>
     
 </body>
 </html>
