--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
 
         <div class="accordion-div">
             <img src="img/illustration-woman-online-desktop.svg" alt="">
-            <div class="accordion-content">
+            <div class="accordion-tab">
                 <h1>FAQ</h1>
+                <div class="accordion-content">
+                    <div class="accordion-header"></div>
+                    <div class="accordion-text"></div>
+                </div>
             </div>
         </div>
 
