--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
     <section class="accordion-section">
 
         <div class="accordion-div">
-            <img src="img/illustration-woman-online-desktop.svg" alt="">
-            <div class="accordion-tab">
+            <div class="accordion-left-column">
+                <img src="img/illustration-woman-online-desktop.svg" alt="">
+            </div>
+            <div class="accordion-right-column">
                 <h1>FAQ</h1>
                 <div class="accordion-content">
-                    <div class="accordion-header"></div>
-                    <div class="accordion-text"></div>
+                    <div class="accordion-question">Question?</div>
+                    <div class="accordion-answer">Long answer</div>
                 </div>
             </div>
         </div>
