--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,13 +11,14 @@
 
     <title>FAQ Accordion Card</title>
 </head>
+
 <body>
 
     <section class="accordion-section">
 
         <div class="accordion-div">
             <div class="accordion-left-column">
-                <img src="img/illustration-woman-online-desktop.svg" alt="">
+                <img src="img/illustration-woman-online-desktop.svg" alt="" width="472" height="359">
             </div>
             <div class="accordion-right-column">
                 <h1>FAQ</h1>
@@ -28,6 +30,7 @@
         </div>
 
     </section>
-    
+
 </body>
+
 </html>
