--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/favicon-32x32.png" type="image/x-icon">
+    <script src="js/app.js"></script>
 
     <title>FAQ Accordion Card</title>
 </head>
@@ -22,6 +23,10 @@
             </div>
             <div class="accordion-right-column">
                 <h1>FAQ</h1>
+                <div class="accordion-content">
+                    <div class="accordion-question">Question?</div>
+                    <div class="accordion-answer">Long answer</div>
+                </div>
                 <div class="accordion-content">
                     <div class="accordion-question">Question?</div>
                     <div class="accordion-answer">Long answer</div>
